services/user/Deployments/service/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-api
  labels:
    istio-injection: enabled
