services/user/Deployments/service/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: user-api
  labels:
    io.kompose.service: user-api
  name: user-api
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 5050
    targetPort: 5050
  selector:
    io.kompose.service: user-api
