services/user/Deployments/service/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: user-api
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    io.kompose.service: db
