services/user/Deployments/service/templates/virtualservice.yaml
  
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
  namespace: user-api
spec:
  selector:
    app: istio-ingressgateway # This is the default ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-api
  namespace: user-api
spec:
  gateways:
    - user-gateway
  hosts:
    - "*" # What inbound Host should be routed. (eg. 'research.bied.nl')
  http:
    - match:
        - uri:
            prefix: "/api/v1/users"
      rewrite:
        uri: "/user"
      route:
        # routes it toward this host. Usually a Kubernetes native 'Service', this should be a FQDN in production
        - destination:
            host: user-api
            port:
              number: 5050
